# A2Amarketplace

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  adapter.py  env.yaml.example  generate_panels.py  platform_export.py  pyproject.toml
project_deal_approach_2/: .gitignore  README.md  env.yaml  pyproject.toml
project_deal_approach_2/analysis/: compare.py
project_deal_approach_2/marketplace/: build_agents.py  channel.py  config.py  llm.py  scheduler.py
project_deal_approach_2/marketplace/prompts/: agent_template.txt
project_deal_approach_2/personas/: set_03.json  set_04.json  set_05.json
project_deal_approach_2/resources_server/: app.py  gains.py  model_config.py  persona_loader.py  verifiers.py
project_deal_approach_2/resources_server/configs/: marketplace.yaml
project_deal_approach_2/scripts/: archive_run.py  generate_private_fields.py  run_experiment.sh  smoke_test.py
project_deal_approach_2/tasks/: generate_tasks.py  marketdeal_tasks.jsonl
project_deal_approach_2/tests/: test_archive_run.py  test_generate_tasks.py
project_deal_approach_2/tests/analysis/: test_compare.py
project_deal_approach_2/tests/marketplace/: test_agent.py  test_build_agents.py  test_channel_ledger.py  test_llm.py  test_persona_enrichment.py  test_scheduler.py  test_template.py
project_deal_approach_2/tests/resources_server/: test_app.py  test_gains.py  test_model_config.py  test_persona_loader.py  test_verifiers_capability.py  test_verifiers_combined.py  test_verifiers_deal_outcomes.py  test_verifiers_negotiation.py  test_verifiers_privacy.py  (+1 more)
(+2115 files in other folders)
