[project]
name = "project-deal-approach-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "openai>=1.40.0,<=2.7.2",  # NeMo Gym requires openai<=2.7.2
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marketplace", "resources_server", "scripts", "tasks", "analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
